--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = External/Niddle
 	url = https://github.com/ReMinoer/Niddle.git
 	branch = master
+[submodule "External/Simulacra"]
+	path = External/Simulacra
+	url = https://github.com/ReMinoer/Simulacra.git
+	branch = master
