--- a/Glyph.UI/Glyph.UI.csproj
+++ b/Glyph.UI/Glyph.UI.csproj
@@ -72,21 +72,13 @@
     <Compile Include="Text.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Collections\Diese.Collections.csproj">
-      <Project>{8E354191-E8E5-498B-9C24-A6765DA86417}</Project>
-      <Name>Diese.Collections</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese.Scheduling\Diese.Scheduling.csproj">
-      <Project>{ED3283B6-9691-4418-96D0-6E83AEE37540}</Project>
-      <Name>Diese.Scheduling</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\External\Fingear\External\Stave\External\Diese\Diese\Diese.csproj">
-      <Project>{F2F3FEB2-8453-409E-B00C-96DC64AC8020}</Project>
-      <Name>Diese</Name>
-    </ProjectReference>
     <ProjectReference Include="..\External\Fingear\External\Stave\Stave\Stave.csproj">
       <Project>{38A041E6-5AA9-4C22-B96F-35167F171959}</Project>
       <Name>Stave</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\External\Fingear\External\Taskete\Taskete\Taskete.csproj">
+      <Project>{107e0777-d23d-4ebb-8aa5-687e2dbe1d66}</Project>
+      <Name>Taskete</Name>
     </ProjectReference>
     <ProjectReference Include="..\External\Fingear\Fingear.MonoGame\Fingear.MonoGame.csproj">
       <Project>{9eef1863-44be-423e-a29d-088c23aac45e}</Project>
