--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -42,8 +42,11 @@
     <PackageReference Include="PropertyChanged.Fody">
       <Version>2.1.4</Version>
     </PackageReference>
+    <PackageReference Include="ReMinoer.Diese">
+      <Version>0.1.2-alpha</Version>
+    </PackageReference>
     <PackageReference Include="ReMinoer.Diese.Collections">
-      <Version>0.1.0-alpha</Version>
+      <Version>0.1.2-alpha</Version>
     </PackageReference>
     <PackageReference Include="System.Reactive">
       <Version>3.1.1</Version>
