Improve scene node editor prototype

--- a/Glyph.Tools/Glyph.Tools.csproj
+++ b/Glyph.Tools/Glyph.Tools.csproj
@@ -49,8 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FreeCamera.cs" />
-    <Compile Include="SceneNodeControl.cs" />
     <Compile Include="IBrush.cs" />
+    <Compile Include="SceneNodeEditor.cs" />
     <Compile Include="ShapedObjectSelector.cs" />
     <Compile Include="ControlLogger.cs" />
     <Compile Include="InputLogger.cs" />
