--- a/Glyph.Composition/Glyph.Composition.csproj
+++ b/Glyph.Composition/Glyph.Composition.csproj
@@ -39,7 +39,7 @@
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="MonoGame.Framework.Portable">
-      <Version>3.7.0.1232-develop</Version>
+      <Version>3.7.1.189</Version>
     </PackageReference>
     <PackageReference Include="PropertyChanged.Fody">
       <Version>2.1.4</Version>
