--- a/Glyph.WpfInterop/Glyph.WpfInterop.csproj
+++ b/Glyph.WpfInterop/Glyph.WpfInterop.csproj
@@ -82,7 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.WindowsDX">
-      <Version>3.7.0.1232-develop</Version>
+      <Version>3.7.1.189</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
