--- a/Glyph.Tools/Glyph.Tools.csproj
+++ b/Glyph.Tools/Glyph.Tools.csproj
@@ -49,7 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FreeCamera.cs" />
+    <Compile Include="Base\HandleBase.cs" />
     <Compile Include="IBrush.cs" />
+    <Compile Include="PositionHandle.cs" />
     <Compile Include="SceneNodeEditor.cs" />
     <Compile Include="ShapedObjectSelector.cs" />
     <Compile Include="ControlLogger.cs" />
@@ -61,6 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShapeRendering\ShapedComponentRendererManager.cs" />
     <Compile Include="ShapeRendering\RectangleComponentRenderer.cs" />
+    <Compile Include="Base\SimpleHandleBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\External\Fingear\External\Stave\Stave\Stave.csproj">
@@ -108,6 +111,7 @@
       <Name>Glyph</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
