--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -91,7 +91,6 @@
     <Compile Include="Math\Shapes\Triangle.cs" />
     <Compile Include="Math\Shapes\Base\TriangledShapeBase.cs" />
     <Compile Include="Math\TransformationExtension.cs" />
-    <Compile Include="Reflection\GlyphTypeInfo.cs" />
     <Compile Include="Exceptions\GlyphException.cs" />
     <Compile Include="Axes.cs" />
     <Compile Include="Injection\IInjectionClient.cs" />
@@ -101,11 +100,8 @@
     <Compile Include="IDrawClient.cs" />
     <Compile Include="IFlipable.cs" />
     <Compile Include="IHandlable.cs" />
-    <Compile Include="Injection\GlyphInjectableCollectionAttribute.cs" />
-    <Compile Include="Injection\GlyphInjectableTrackerAttribute.cs" />
-    <Compile Include="Injection\GlyphInjectableAttribute.cs" />
-    <Compile Include="Injection\GlyphInjectableTargets.cs" />
-    <Compile Include="Injection\IGlyphInjectableAttribute.cs" />
+    <Compile Include="Injection\ResolveTargetsAttribute.cs" />
+    <Compile Include="Injection\ResolveTargets.cs" />
     <Compile Include="IO\ILoadFormat.cs" />
     <Compile Include="IO\ISaveFormat.cs" />
     <Compile Include="IO\ISaveLoadFormat.cs" />
@@ -131,8 +127,6 @@
     <Compile Include="Observation\Properties\SubjectPool.cs" />
     <Compile Include="Rectangle.Extension.cs" />
     <Compile Include="Referential.cs" />
-    <Compile Include="Reflection\GlyphTypeInfoProvider.cs" />
-    <Compile Include="Reflection\InjectablePropertyInfo.cs" />
     <Compile Include="RepresentativeEqualityComparer.cs" />
     <Compile Include="SceneNodeExtension.cs" />
     <Compile Include="SpriteBatchContext.cs" />
