--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -93,15 +93,15 @@
     <Compile Include="Math\TransformationExtension.cs" />
     <Compile Include="Exceptions\GlyphException.cs" />
     <Compile Include="Axes.cs" />
-    <Compile Include="Injection\IInjectionClient.cs" />
+    <Compile Include="Resolver\IResolveClient.cs" />
     <Compile Include="IO\FileType.cs" />
     <Compile Include="GlyphData.cs" />
     <Compile Include="IDirtable.cs" />
     <Compile Include="IDrawClient.cs" />
     <Compile Include="IFlipable.cs" />
     <Compile Include="IHandlable.cs" />
-    <Compile Include="Injection\ResolveTargetsAttribute.cs" />
-    <Compile Include="Injection\ResolveTargets.cs" />
+    <Compile Include="Resolver\ResolveTargetsAttribute.cs" />
+    <Compile Include="Resolver\ResolveTargets.cs" />
     <Compile Include="IO\ILoadFormat.cs" />
     <Compile Include="IO\ISaveFormat.cs" />
     <Compile Include="IO\ISaveLoadFormat.cs" />
