--- a/Glyph.Animation/Glyph.Animation.csproj
+++ b/Glyph.Animation/Glyph.Animation.csproj
@@ -106,8 +106,8 @@
       <Project>{fdccff17-1219-4a4f-a674-d989319e5bb4}</Project>
       <Name>OverGraphed</Name>
     </ProjectReference>
-    <ProjectReference Include="..\External\Niddle\Niddle\Niddle.csproj">
-      <Project>{91ef736f-8196-4db7-bdec-9fe05b14c179}</Project>
+    <ProjectReference Include="..\External\Simulacra\External\Niddle\Niddle\Niddle.csproj">
+      <Project>{cb5183d5-f68e-4129-a716-7f9eb33ce223}</Project>
       <Name>Niddle</Name>
     </ProjectReference>
     <ProjectReference Include="..\External\Simulacra\Simulacra\Simulacra.csproj">
