--- a/Glyph/Glyph.csproj
+++ b/Glyph/Glyph.csproj
@@ -58,14 +58,8 @@
     <Compile Include="Angle.cs" />
     <Compile Include="Export\AssemblyContainsAttribute.cs" />
     <Compile Include="Axis.cs" />
-    <Compile Include="Binding\BindingCollectionExtension.cs" />
-    <Compile Include="Binding\ITwoWayBinding.cs" />
     <Compile Include="Export\TypeImporter.cs" />
     <Compile Include="Handlable.cs" />
-    <Compile Include="Binding\Binding.cs" />
-    <Compile Include="Binding\BindingCollection.cs" />
-    <Compile Include="Binding\ExpressionExtension.cs" />
-    <Compile Include="Binding\IOneWayBinding.cs" />
     <Compile Include="Color.Extension.cs" />
     <Compile Include="IContentLibrary.cs" />
     <Compile Include="IO\DataContractSerializationFormat.cs" />
@@ -90,7 +84,6 @@
     <Compile Include="Axes.cs" />
     <Compile Include="Resolver\GlyphDependency.cs" />
     <Compile Include="Resolver\GlyphResolvableMemberCache.cs" />
-    <Compile Include="Resolver\IResolveClient.cs" />
     <Compile Include="IO\FileType.cs" />
     <Compile Include="GlyphData.cs" />
     <Compile Include="IDirtable.cs" />
@@ -161,8 +154,8 @@
       <Project>{dfdab89c-1379-4bfa-93c9-75e1e7b16010}</Project>
       <Name>Diese %28Taskete%29</Name>
     </ProjectReference>
-    <ProjectReference Include="..\External\Niddle\Niddle\Niddle.csproj">
-      <Project>{91EF736F-8196-4DB7-BDEC-9FE05B14C179}</Project>
+    <ProjectReference Include="..\External\Simulacra\External\Niddle\Niddle\Niddle.csproj">
+      <Project>{cb5183d5-f68e-4129-a716-7f9eb33ce223}</Project>
       <Name>Niddle</Name>
     </ProjectReference>
     <ProjectReference Include="..\External\Simulacra\Simulacra\Simulacra.csproj">
