--- a/Glyph.Space/Glyph.Space.csproj
+++ b/Glyph.Space/Glyph.Space.csproj
@@ -74,6 +74,10 @@
       <Project>{aa20cdf3-72ed-48da-ae3c-74c6fe9003fb}</Project>
       <Name>Diese.Collections %28Stave%29</Name>
     </ProjectReference>
+    <ProjectReference Include="..\External\Simulacra\Simulacra\Simulacra.csproj">
+      <Project>{8BA795FC-E007-40BB-BD70-90D970C99369}</Project>
+      <Name>Simulacra</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Glyph\Glyph.csproj">
       <Project>{457cbbf3-26c7-478b-b4eb-1f85ff3c07f5}</Project>
       <Name>Glyph</Name>
